# iris

./: .hgignore  Makefile  Readme.md
iris-cpp/: CMakeLists.txt
iris-cpp/cmake/: ExternalDependencies.cmake
iris-cpp/include/iris/: Agent.hpp  Model.hpp  Parameters.hpp  Threading.hpp  Types.hpp  Utils.hpp
iris-cpp/include/iris/io/: CommandLine.hpp
iris-cpp/include/iris/io/reader/: CensusReader.hpp  ConfigReader.hpp  ValueReader.hpp
iris-cpp/include/iris/io/writer/: AttributeWriter.hpp  CommWriter.hpp  NetworkWriter.hpp  PowerWriter.hpp  StatisticsWriter.hpp
iris-cpp/src/: CMakeLists.txt  main.cpp
iris-cpp/src/iris/: Agent.cpp  Model.cpp  Threading.cpp
iris-cpp/src/iris/io/: CommandLine.cpp
iris-cpp/src/iris/io/reader/: CensusReader.cpp  ConfigReader.cpp  ValueReader.cpp
iris-cpp/src/iris/io/writer/: AttributeWriter.cpp  CommWriter.cpp  NetworkWriter.cpp  PowerWriter.cpp  StatisticsWriter.cpp
iris-cpp/test/: CMakeLists.txt
iris-cpp/test/iris/: AgentTests.cpp  ThreadingTests.cpp  UtilsTest.cpp
iris-cpp/test/iris/io/reader/: CensusReaderTests.cpp  ConfigReaderTests.cpp  ValueReaderTests.cpp
iris-cpp/test/iris/io/writer/: AttributeWriterTests.cpp  NetworkWriterTests.cpp  StatisticsWriterTests.cpp
sample_cases/household/: params.cfg
sample_cases/no_power_test/: params.cfg
sample_cases/power_test/: census.csv  params.cfg
scripts/: run_tests.sh
